...
                                ) {
                                    TextButton(
                                        onClick = {
                                            onEvent(ReminderEvent.EditClicked(person.personId))
                                        }
                                    ) {
                                        Text(text = "编辑")
                                    }
                                }
                            }
                        }
                    }
                }
...
